--- a/about/index.html
+++ b/about/index.html
@@ -5,15 +5,15 @@ layout: default
 <section>
     <h2>About Curtis</h2>
     <p>Spendlove. Yup. /spend/ - /ləv/ It sounds just like it's spelled. One can imagine the jokes. And I surrounded myself with friends who thought the jokes were much more humorous when we were teenagers than when we were adolescents.</p>
-    <p>I'm a coder, author, and web developer. During the daytime I write mind-numbingly large enterprise applications to put steak on the table. When the sun sets I don my tights and cape and write smaller websites, books, the culmination of which have recently added a salt and pepper shaker to the table.</p>
-    <p><em>I don't <span style="text-decoration: line-through">usually</span> <strong>really</strong> code in tights or a cape</em>.</p>
+    <p>I'm a coder, author, and web developer. During the daytime I write mind-numbingly large enterprise applications to put steak on the table. When the sun sets I don my tights and cape and work on smaller, personal projects...the culmination of which have recently added a salt and pepper shaker to the table.</p>
+    <p><em>I don't <span style="text-decoration: line-through">really</span> <strong>usually</strong> code in tights or a cape</em>.</p>
 </section>
 
 <section>
     <h2>Resume</h2>
     <h3><strong>Curtis Spendlove</strong></h3>
     <div><strong>Level 39 <em>Web Developer</em></strong></div>
-    <div><span>I've been developing for the web since 1996, the past 20 years.</span></div>
+    <div><span>I've been developing for the web since 1996, the past 20 years (of course back then it was using Perl, through CGI).</span></div>
     <h3>Primary Skills</h3>
     <div class="progress">
       <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%;">
@@ -39,7 +39,7 @@ layout: default
 
 <section>
     <h2>Consulting</h2>
-    <div><span>I'm often available (in weekly bolcks) for one-on-one and group consultation.</span></div>
+    <div><span>I'm often available (in weekly blocks) for one-on-one and group consultation.</span></div>
     <div><strong>2016</strong></div>
     <div>Jan</div>
     <div style="width: 25%; height: 1em; background-color: red; float: left;"></div>
@@ -54,14 +54,60 @@ layout: default
     <div>Mar</div>
     <div style="width: 25%; height: 1em; background-color: red; float: left;"></div>
     <div style="width: 25%; height: 1em; background-color: red; float: left;"></div>
-    <div style="width: 25%; height: 1em; background-color: transparent; float: left;"></div>
-    <div style="width: 25%; height: 1em; background-color: transparent; float: left;"></div>
+    <div style="width: 25%; height: 1em; background-color: red; float: left;"></div>
+    <div style="width: 25%; height: 1em; background-color: red; float: left;"></div>
     <div>Apr</div>
-    <div style="width: 25%; height: 1em; background-color: transparent; float: left;"></div>
-    <div style="width: 25%; height: 1em; background-color: transparent; float: left;"></div>
-    <div style="width: 25%; height: 1em; background-color: transparent; float: left;"></div>
-    <div style="width: 25%; height: 1em; background-color: transparent; float: left;"></div>
+    <div style="width: 25%; height: 1em; background-color: red; float: left;"></div>
+    <div style="width: 25%; height: 1em; background-color: red; float: left;"></div>
+    <div style="width: 25%; height: 1em; background-color: red; float: left;"></div>
+    <div style="width: 25%; height: 1em; background-color: red; float: left;"></div>
+    <div>May</div>
+    <div style="width: 25%; height: 1em; background-color: red; float: left;"></div>
+    <div style="width: 25%; height: 1em; background-color: red; float: left;"></div>
+    <div style="width: 25%; height: 1em; background-color: green; float: left;"></div>
+    <div style="width: 25%; height: 1em; background-color: green; float: left;"></div>
+    <div>Jun</div>
+    <div style="width: 25%; height: 1em; background-color: green; float: left;"></div>
+    <div style="width: 25%; height: 1em; background-color: green; float: left;"></div>
+    <div style="width: 25%; height: 1em; background-color: green; float: left;"></div>
+    <div style="width: 25%; height: 1em; background-color: green; float: left;"></div>
+    <div>Jul</div>
+    <div style="width: 25%; height: 1em; background-color: green; float: left;"></div>
+    <div style="width: 25%; height: 1em; background-color: green; float: left;"></div>
+    <div style="width: 25%; height: 1em; background-color: green; float: left;"></div>
+    <div style="width: 25%; height: 1em; background-color: green; float: left;"></div>
+    <div>Aug</div>
+    <div style="width: 25%; height: 1em; background-color: green; float: left;"></div>
+    <div style="width: 25%; height: 1em; background-color: green; float: left;"></div>
+    <div style="width: 25%; height: 1em; background-color: green; float: left;"></div>
+    <div style="width: 25%; height: 1em; background-color: green; float: left;"></div>
+    <div>Sep</div>
+    <div style="width: 25%; height: 1em; background-color: green; float: left;"></div>
+    <div style="width: 25%; height: 1em; background-color: green; float: left;"></div>
+    <div style="width: 25%; height: 1em; background-color: green; float: left;"></div>
+    <div style="width: 25%; height: 1em; background-color: green; float: left;"></div>
+    <div>Oct</div>
+    <div style="width: 25%; height: 1em; background-color: green; float: left;"></div>
+    <div style="width: 25%; height: 1em; background-color: green; float: left;"></div>
+    <div style="width: 25%; height: 1em; background-color: green; float: left;"></div>
+    <div style="width: 25%; height: 1em; background-color: green; float: left;"></div>
+    <div>Nov</div>
+    <div style="width: 25%; height: 1em; background-color: green; float: left;"></div>
+    <div style="width: 25%; height: 1em; background-color: green; float: left;"></div>
+    <div style="width: 25%; height: 1em; background-color: green; float: left;"></div>
+    <div style="width: 25%; height: 1em; background-color: green; float: left;"></div>
+    <div>Dec</div>
+    <div style="width: 25%; height: 1em; background-color: silver; float: left;"></div>
+    <div style="width: 25%; height: 1em; background-color: silver; float: left;"></div>
+    <div style="width: 25%; height: 1em; background-color: silver; float: left;"></div>
+    <div style="width: 25%; height: 1em; background-color: silver; float: left;"></div>
 </section>
+
+
+<section>
+  &nbsp;
+</section>
+ 
 
 <!--
 <section>
