--- a/about/index.html
+++ b/about/index.html
@@ -41,73 +41,72 @@ layout: default
     <h2>Consulting</h2>
     <div><span>I'm often available (in weekly blocks) for one-on-one and group consultation.</span></div>
     <div><strong>2016</strong></div>
-    <div>Jan</div>
-    <div style="width: 25%; height: 1em; background-color: red; float: left;"></div>
-    <div style="width: 25%; height: 1em; background-color: red; float: left;"></div>
-    <div style="width: 25%; height: 1em; background-color: red; float: left;"></div>
-    <div style="width: 25%; height: 1em; background-color: red; float: left;"></div>
-    <div>Feb</div>
-    <div style="width: 25%; height: 1em; background-color: red; float: left;"></div>
-    <div style="width: 25%; height: 1em; background-color: red; float: left;"></div>
-    <div style="width: 25%; height: 1em; background-color: red; float: left;"></div>
-    <div style="width: 25%; height: 1em; background-color: red; float: left;"></div>
-    <div>Mar</div>
-    <div style="width: 25%; height: 1em; background-color: red; float: left;"></div>
-    <div style="width: 25%; height: 1em; background-color: red; float: left;"></div>
-    <div style="width: 25%; height: 1em; background-color: red; float: left;"></div>
-    <div style="width: 25%; height: 1em; background-color: red; float: left;"></div>
-    <div>Apr</div>
-    <div style="width: 25%; height: 1em; background-color: red; float: left;"></div>
-    <div style="width: 25%; height: 1em; background-color: red; float: left;"></div>
-    <div style="width: 25%; height: 1em; background-color: red; float: left;"></div>
-    <div style="width: 25%; height: 1em; background-color: red; float: left;"></div>
-    <div>May</div>
-    <div style="width: 25%; height: 1em; background-color: red; float: left;"></div>
-    <div style="width: 25%; height: 1em; background-color: red; float: left;"></div>
-    <div style="width: 25%; height: 1em; background-color: green; float: left;"></div>
-    <div style="width: 25%; height: 1em; background-color: green; float: left;"></div>
-    <div>Jun</div>
-    <div style="width: 25%; height: 1em; background-color: green; float: left;"></div>
-    <div style="width: 25%; height: 1em; background-color: green; float: left;"></div>
-    <div style="width: 25%; height: 1em; background-color: green; float: left;"></div>
-    <div style="width: 25%; height: 1em; background-color: green; float: left;"></div>
-    <div>Jul</div>
-    <div style="width: 25%; height: 1em; background-color: green; float: left;"></div>
-    <div style="width: 25%; height: 1em; background-color: green; float: left;"></div>
-    <div style="width: 25%; height: 1em; background-color: green; float: left;"></div>
-    <div style="width: 25%; height: 1em; background-color: green; float: left;"></div>
-    <div>Aug</div>
-    <div style="width: 25%; height: 1em; background-color: green; float: left;"></div>
-    <div style="width: 25%; height: 1em; background-color: green; float: left;"></div>
-    <div style="width: 25%; height: 1em; background-color: green; float: left;"></div>
-    <div style="width: 25%; height: 1em; background-color: green; float: left;"></div>
-    <div>Sep</div>
-    <div style="width: 25%; height: 1em; background-color: green; float: left;"></div>
-    <div style="width: 25%; height: 1em; background-color: green; float: left;"></div>
-    <div style="width: 25%; height: 1em; background-color: green; float: left;"></div>
-    <div style="width: 25%; height: 1em; background-color: green; float: left;"></div>
-    <div>Oct</div>
-    <div style="width: 25%; height: 1em; background-color: green; float: left;"></div>
-    <div style="width: 25%; height: 1em; background-color: green; float: left;"></div>
-    <div style="width: 25%; height: 1em; background-color: green; float: left;"></div>
-    <div style="width: 25%; height: 1em; background-color: green; float: left;"></div>
-    <div>Nov</div>
-    <div style="width: 25%; height: 1em; background-color: green; float: left;"></div>
-    <div style="width: 25%; height: 1em; background-color: green; float: left;"></div>
-    <div style="width: 25%; height: 1em; background-color: green; float: left;"></div>
-    <div style="width: 25%; height: 1em; background-color: green; float: left;"></div>
-    <div>Dec</div>
-    <div style="width: 25%; height: 1em; background-color: silver; float: left;"></div>
-    <div style="width: 25%; height: 1em; background-color: silver; float: left;"></div>
-    <div style="width: 25%; height: 1em; background-color: silver; float: left;"></div>
-    <div style="width: 25%; height: 1em; background-color: silver; float: left;"></div>
+    <div style="width: 25%; height: 1.4em; color: white; background-color: red; float: left; border-right: 1px solid white; border-bottom: 1px solid white;"><span style="margin-left: 4px;">January</span></div>
+    <div style="width: 25%; height: 1.4em; color: white; background-color: red; float: left; border-right: 1px solid white; border-bottom: 1px solid white;"></div>
+    <div style="width: 25%; height: 1.4em; color: white; background-color: red; float: left; border-right: 1px solid white; border-bottom: 1px solid white;"></div>
+    <div style="width: 25%; height: 1.4em; color: white; background-color: red; float: left; border-right: 1px solid white; border-bottom: 1px solid white;"></div>
+
+    <div style="width: 25%; height: 1.4em; color: white; background-color: red; float: left; border-right: 1px solid white; border-bottom: 1px solid white;"><span style="margin-left: 4px;">February</span></div>
+    <div style="width: 25%; height: 1.4em; color: white; background-color: red; float: left; border-right: 1px solid white; border-bottom: 1px solid white;"></div>
+    <div style="width: 25%; height: 1.4em; color: white; background-color: red; float: left; border-right: 1px solid white; border-bottom: 1px solid white;"></div>
+    <div style="width: 25%; height: 1.4em; color: white; background-color: red; float: left; border-right: 1px solid white; border-bottom: 1px solid white;"></div>
+
+    <div style="width: 25%; height: 1.4em; color: white; background-color: red; float: left; border-right: 1px solid white; border-bottom: 1px solid white;"><span style="margin-left: 4px;">March</span></div>
+    <div style="width: 25%; height: 1.4em; color: white; background-color: red; float: left; border-right: 1px solid white; border-bottom: 1px solid white;"></div>
+    <div style="width: 25%; height: 1.4em; color: white; background-color: red; float: left; border-right: 1px solid white; border-bottom: 1px solid white;"></div>
+    <div style="width: 25%; height: 1.4em; color: white; background-color: red; float: left; border-right: 1px solid white; border-bottom: 1px solid white;"></div>
+
+    <div style="width: 25%; height: 1.4em; color: white; background-color: red; float: left; border-right: 1px solid white; border-bottom: 1px solid white;"><span style="margin-left: 4px;">April</span></div>
+    <div style="width: 25%; height: 1.4em; color: white; background-color: red; float: left; border-right: 1px solid white; border-bottom: 1px solid white;"></div>
+    <div style="width: 25%; height: 1.4em; color: white; background-color: red; float: left; border-right: 1px solid white; border-bottom: 1px solid white;"></div>
+    <div style="width: 25%; height: 1.4em; color: white; background-color: red; float: left; border-right: 1px solid white; border-bottom: 1px solid white;"></div>
+
+    <div style="width: 25%; height: 1.4em; color: white; background-color: red; float: left; border-right: 1px solid white; border-bottom: 1px solid white;"><span style="margin-left: 4px;">May</span></div>
+    <div style="width: 25%; height: 1.4em; color: white; background-color: red; float: left; border-right: 1px solid white; border-bottom: 1px solid white;"></div>
+    <div style="width: 25%; height: 1.4em; color: white; background-color: #337ab7; float: left; border-right: 1px solid white; border-bottom: 1px solid white;"></div>
+    <div style="width: 25%; height: 1.4em; color: white; background-color: #337ab7; float: left; border-right: 1px solid white; border-bottom: 1px solid white;"></div>
+
+    <div style="width: 25%; height: 1.4em; color: white; background-color: #337ab7; float: left; border-right: 1px solid white; border-bottom: 1px solid white;"><span style="margin-left: 4px;">June</span></div>
+    <div style="width: 25%; height: 1.4em; color: white; background-color: #337ab7; float: left; border-right: 1px solid white; border-bottom: 1px solid white;"></div>
+    <div style="width: 25%; height: 1.4em; color: white; background-color: #337ab7; float: left; border-right: 1px solid white; border-bottom: 1px solid white;"></div>
+    <div style="width: 25%; height: 1.4em; color: white; background-color: #337ab7; float: left; border-right: 1px solid white; border-bottom: 1px solid white;"></div>
+
+    <div style="width: 25%; height: 1.4em; color: white; background-color: #337ab7; float: left; border-right: 1px solid white; border-bottom: 1px solid white;"><span style="margin-left: 4px;">July</span></div>
+    <div style="width: 25%; height: 1.4em; color: white; background-color: #337ab7; float: left; border-right: 1px solid white; border-bottom: 1px solid white;"></div>
+    <div style="width: 25%; height: 1.4em; color: white; background-color: #337ab7; float: left; border-right: 1px solid white; border-bottom: 1px solid white;"></div>
+    <div style="width: 25%; height: 1.4em; color: white; background-color: #337ab7; float: left; border-right: 1px solid white; border-bottom: 1px solid white;"></div>
+
+    <div style="width: 25%; height: 1.4em; color: white; background-color: #337ab7; float: left; border-right: 1px solid white; border-bottom: 1px solid white;"><span style="margin-left: 4px;">August</span></div>
+    <div style="width: 25%; height: 1.4em; color: white; background-color: #337ab7; float: left; border-right: 1px solid white; border-bottom: 1px solid white;"></div>
+    <div style="width: 25%; height: 1.4em; color: white; background-color: #337ab7; float: left; border-right: 1px solid white; border-bottom: 1px solid white;"></div>
+    <div style="width: 25%; height: 1.4em; color: white; background-color: #337ab7; float: left; border-right: 1px solid white; border-bottom: 1px solid white;"></div>
+
+    <div style="width: 25%; height: 1.4em; color: white; background-color: #337ab7; float: left; border-right: 1px solid white; border-bottom: 1px solid white;"><span style="margin-left: 4px;">September</span></div>
+    <div style="width: 25%; height: 1.4em; color: white; background-color: #337ab7; float: left; border-right: 1px solid white; border-bottom: 1px solid white;"></div>
+    <div style="width: 25%; height: 1.4em; color: white; background-color: #337ab7; float: left; border-right: 1px solid white; border-bottom: 1px solid white;"></div>
+    <div style="width: 25%; height: 1.4em; color: white; background-color: #337ab7; float: left; border-right: 1px solid white; border-bottom: 1px solid white;"></div>
+
+    <div style="width: 25%; height: 1.4em; color: white; background-color: #337ab7; float: left; border-right: 1px solid white; border-bottom: 1px solid white;"><span style="margin-left: 4px;">October</span></div>
+    <div style="width: 25%; height: 1.4em; color: white; background-color: #337ab7; float: left; border-right: 1px solid white; border-bottom: 1px solid white;"></div>
+    <div style="width: 25%; height: 1.4em; color: white; background-color: #337ab7; float: left; border-right: 1px solid white; border-bottom: 1px solid white;"></div>
+    <div style="width: 25%; height: 1.4em; color: white; background-color: #337ab7; float: left; border-right: 1px solid white; border-bottom: 1px solid white;"></div>
+
+    <div style="width: 25%; height: 1.4em; color: white; background-color: #337ab7; float: left; border-right: 1px solid white; border-bottom: 1px solid white;"><span style="margin-left: 4px;">November</span></div>
+    <div style="width: 25%; height: 1.4em; color: white; background-color: #337ab7; float: left; border-right: 1px solid white; border-bottom: 1px solid white;"></div>
+    <div style="width: 25%; height: 1.4em; color: white; background-color: #337ab7; float: left; border-right: 1px solid white; border-bottom: 1px solid white;"></div>
+    <div style="width: 25%; height: 1.4em; color: white; background-color: #337ab7; float: left; border-right: 1px solid white; border-bottom: 1px solid white;"></div>
+
+    <div style="width: 25%; height: 1.4em; color: white; background-color: #337ab7; float: left; border-right: 1px solid white; border-bottom: 1px solid white;"><span style="margin-left: 4px;">December</span></div>
+    <div style="width: 25%; height: 1.4em; color: white; background-color: #337ab7; float: left; border-right: 1px solid white; border-bottom: 1px solid white;"></div>
+    <div style="width: 25%; height: 1.4em; color: white; background-color: silver; float: left; border-right: 1px solid white; border-bottom: 1px solid white;"></div>
+    <div style="width: 25%; height: 1.4em; color: white; background-color: silver; float: left; border-right: 1px solid white; border-bottom: 1px solid white;"></div>
 </section>
 
 
 <section>
   &nbsp;
 </section>
- 
+
 
 <!--
 <section>
