post 25m of rock

--- a/about/index.html
+++ b/about/index.html
@@ -4,9 +4,10 @@ layout: default
 
 <section>
     <h2>About Curtis</h2>
-    <p>Spendlove. Yup. /spend/ - /ləv/ It sounds just like it's spelled. One can imagine the jokes. And I surrounded myself with friends who thought the jokes were much more humorous when we were teenagers than when we were adolescents.</p>
-    <p>I'm a coder, author, and web developer. During the daytime I write mind-numbingly large enterprise applications to put steak on the table. When the sun sets I don my tights and cape and work on smaller, personal projects...the culmination of which have recently added a salt and pepper shaker to the table.</p>
+    <p>Spendlove. Yup. <span style="font-family: 'Source Sans Pro';">/spend/ - /ləv/</span> It sounds just like it's spelled. One can imagine the jokes. And I surrounded myself with friends who thought the jokes were much more humorous when we were teenagers than when we were adolescents.</p>
+    <p>I'm a husband, father, author, and coder. During the daytime I write mind-numbingly large enterprise applications to put steak on the table. When the sun sets I don my tights and cape and work on smaller, personal projects...the culmination of which have recently added a salt and pepper shaker to the table.</p>
     <p><em>I don't <span style="text-decoration: line-through">really</span> <strong>usually</strong> code in tights or a cape</em>.</p>
+    <p>I first knew I was destined to write code when I shipped my first Macintosh application in the 90's. I was irritated by dying continually in Descent. So, I wrote Descent Saved Game Editor. DSGE followed the UNIX tradition: do one task and do it well...allow the user to hack their saved games with vastly superior armor, weaponry, and ungodly quantities of ammunition.</p>
 </section>
 
 <section>
@@ -38,8 +39,13 @@ layout: default
 </section>
 
 <section>
-    <h2>Consulting</h2>
-    <div><span>I'm often available (in weekly blocks) for one-on-one and group consultation.</span></div>
+    <h2>Stuck?</h2>
+    <div>
+      <p>Chances are high you have inefficiencies (or complete blocks) in your technology chain. Let's work together to figure them out.</p>
+      <p>The timegrid below indicates my availability. I'm free for sustained, focused work in the weeks coded blue. But we can always have a quick chat or email conversation starting at <a href="mailto:curtis@curtisspendlove.com">curtis@curtisspendlove.com</a>. Or reach out to me on the services below the timegrid.</p>
+      <p>The results of this conversation will help me create a roadmap <!-- TODO: link to sample roadmap --> focusing on improvement areas in your technology chain.</p>
+      <p>(I'm *almost* always booked out a few weeks in advance, so you should reach out soon.)
+    </div>
     <div><strong>2016</strong></div>
     <div style="width: 25%; height: 1.4em; color: white; background-color: red; float: left; border-right: 1px solid white; border-bottom: 1px solid white;"><span style="margin-left: 4px;">January</span></div>
     <div style="width: 25%; height: 1.4em; color: white; background-color: red; float: left; border-right: 1px solid white; border-bottom: 1px solid white;"></div>
@@ -104,7 +110,13 @@ layout: default
 
 
 <section>
-  &nbsp;
+  <div style="font-size: 3em; text-align: center;">
+    <a href="https://twitter.com/curtisspendlove"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+    <a href="https://www.facebook.com/cuspendlove"><i class="fa fa-facebook" aria-hidden="true"></i></a></a>
+    <a href="https://www.linkedin.com/in/curtisspendlove"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+    <a href="https://github.com/curtisspendlove"><i class="fa fa-github" aria-hidden="true"></i></a>
+    <a href="http://stackexchange.com/users/8315655/curtis-spendlove"><i class="fa fa-stack-overflow" aria-hidden="true"></i></a>
+  </div>
 </section>
 
 
